<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HomeFragment">


        <ImageView
            android:id="@+id/homeLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/grp_btns_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/grp_btns_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_play"
                style="@style/stl_grp_btn_home"
                android:text="@string/btn_play" />

            <Button
                android:id="@+id/btn_leaderboard"
                style="@style/stl_grp_btn_home"
                android:text="@string/btn_leaderboard" />

            <Button
                android:id="@+id/btn_setting"
                style="@style/stl_grp_btn_home"
                android:text="@string/btn_setting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grp_btns_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/grp_btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grp_btns_home"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/shp_clr_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/shp_clr_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grp_btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grp_btns_home">


            <Button
                android:id="@+id/btn_facebook_sign_in"
                android:layout_width="76dp"
                android:layout_height="31dp"
                android:layout_margin="6dp"
                android:width="31dp"
                android:height="76dp"
                android:background="@drawable/bg_facebook_signin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_google_sign_in"
                android:layout_width="76dp"
                android:layout_height="31dp"
                android:layout_margin="6dp"
                android:width="31dp"
                android:height="76dp"
                android:background="@drawable/bg_google_signin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/google"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>