<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LevelFragment">


        <TextView
            android:id="@+id/lbl_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/bg_level"
            android:fontFamily="@font/goodgirl"
            android:gravity="center"
            android:text="@string/lbl_level"
            android:textColor="@color/main_txt_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/grp_lbl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_level_x"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_level"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingTop="16dp"
                android:paddingEnd="30dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/txt_level_1"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_highest_score"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_no_of_question"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_level_start_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:width="76dp"
                android:height="31dp"
                android:background="@drawable/bg_start_game"
                android:fontFamily="@font/montserrat_bold"
                android:text="Start"
                android:textColor="@color/main_txt_color"
                android:textSize="16sp" />
z
        </LinearLayout>


        <LinearLayout
            android:id="@+id/grp_lbl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_level_x"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grp_lbl_1"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingTop="16dp"
                android:paddingEnd="30dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="Level 2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_highest_score"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_no_of_question"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_level_start_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:width="76dp"
                android:height="31dp"
                android:background="@drawable/bg_start_game"
                android:fontFamily="@font/goodgirl"
                android:text="Start"
                android:textColor="@color/main_txt_color"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/grp_lbl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_level_x"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grp_lbl_2"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingTop="16dp"
                android:paddingEnd="30dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="Level 3"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_highest_score"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_no_of_question"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_level_start_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:width="76dp"
                android:height="31dp"
                android:background="@drawable/bg_start_game"
                android:fontFamily="@font/goodgirl"
                android:text="Start"
                android:textColor="@color/main_txt_color"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/grp_lbl_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_level_x"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grp_lbl_3"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingTop="16dp"
                android:paddingEnd="30dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="Level 2"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_highest_score"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/txt_no_of_question"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_level_start_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:width="76dp"
                android:height="31dp"
                android:background="@drawable/bg_start_game"
                android:fontFamily="@font/goodgirl"
                android:text="Start"
                android:textColor="@color/main_txt_color"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>